--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -15,25 +15,25 @@ jobs:
               uses: actions/checkout@main
               with:
                   ref: ${{ github.head_ref }}
-                  token: ${{ secrets.TOKEN }}
+                  token: ${{ secrets.GITHUB_TOKEN }}
 
-            - name: Analyze
-              uses: foo-software/lighthouse-check-action@master
-              id: lighthouse
-              with:
-                  emulatedFormFactor: all
-                  locale: en
-                  prCommentEnabled: false
-                  verbose: true
-                  urls: >-
-                      https://homeschool.rebeccareid.com,
-                      https://homeschool.rebeccareid.com/posts/,
-                      https://homeschool.rebeccareid.com/yes-you-can-homeschool/,
-                      https://homeschool.rebeccareid.com/product/yes-you-can-homeschool-ecourse/,
-                      https://homeschool.rebeccareid.com/vip/,
-                      https://homeschool.rebeccareid.com/rebecca-reid/,
-                      https://homeschool.rebeccareid.com/product/marco-polos-silk-road-game/,
-                      https://homeschool.rebeccareid.com/courses/
+#            - name: Analyze
+#              uses: foo-software/lighthouse-check-action@master
+#              id: lighthouse
+#              with:
+#                  emulatedFormFactor: all
+#                  locale: en
+#                  prCommentEnabled: false
+#                  verbose: true
+#                  urls: >-
+#                      https://homeschool.rebeccareid.com,
+#                      https://homeschool.rebeccareid.com/posts/,
+#                      https://homeschool.rebeccareid.com/yes-you-can-homeschool/,
+#                      https://homeschool.rebeccareid.com/product/yes-you-can-homeschool-ecourse/,
+#                      https://homeschool.rebeccareid.com/vip/,
+#                      https://homeschool.rebeccareid.com/rebecca-reid/,
+#                      https://homeschool.rebeccareid.com/product/marco-polos-silk-road-game/,
+#                      https://homeschool.rebeccareid.com/courses/
 
             - name: Setup Node.JS
               if: ${{ !cancelled() }}
@@ -46,14 +46,14 @@ jobs:
               if: ${{ !cancelled() }}
               run: npm install
 
-            - name: Comment
-              if: success()
-              run:
-                  node --trace-warnings --harmony .github/workflows/lighthouse.js '${{
-                  secrets.TOKEN }}' '${{ join(steps.lighthouse.outputs.*, '\n') }}' ''
+#            - name: Comment
+#              if: success()
+#              run:
+#                  node --trace-warnings --harmony .github/workflows/lighthouse.js '${{
+#                  secrets.GITHUB_TOKEN }}' '${{ join(steps.lighthouse.outputs.*, '\n') }}' ''
 
             - name: Comment
-              if: failure()
+#              if: failure()
               run:
                   node --trace-warnings --harmony .github/workflows/lighthouse.js '${{
-                  secrets.TOKEN }}' '{}' '1'
+                  secrets.GITHUB_TOKEN }}' '{}' '1'
