--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -15,7 +15,7 @@ jobs:
               uses: actions/checkout@main
               with:
                   ref: ${{ github.head_ref }}
-                  token: ${{ secrets.GITHUB_TOKEN }}
+                  token: ${{ secrets.TOKEN }}
 
 #            - name: Analyze
 #              uses: foo-software/lighthouse-check-action@master
@@ -50,10 +50,10 @@ jobs:
 #              if: success()
 #              run:
 #                  node --trace-warnings --harmony .github/workflows/lighthouse.js '${{
-#                  secrets.GITHUB_TOKEN }}' '${{ join(steps.lighthouse.outputs.*, '\n') }}' ''
+#                  secrets.TOKEN }}' '${{ join(steps.lighthouse.outputs.*, '\n') }}' ''
 
             - name: Comment
 #              if: failure()
               run:
                   node --trace-warnings --harmony .github/workflows/lighthouse.js '${{
-                  secrets.GITHUB_TOKEN }}' '{}' '1'
+                  secrets.TOKEN }}' '{}' ''
