--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -3,7 +3,7 @@ name: Run Lighthouse
 on:
     workflow_dispatch:
     schedule:
-        - cron: "00 00 * * SUN"
+        - cron: "00 09 * * *"
 
 jobs:
     run:
