--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -12,17 +12,17 @@ jobs:
 
         steps:
             - name: Checkout
-              uses: actions/checkout@v2.3.4
+              uses: actions/checkout@v2.3.5
               with:
                   ref: ${{ github.head_ref }}
                   token: ${{ secrets.TOKEN }}
 
             - name: Analyze
-              uses: foo-software/lighthouse-check-action@v4.0.0
+              uses: foo-software/lighthouse-check-action@v5.0.0
               id: lighthouse
               continue-on-error: true
               with:
-                  emulatedFormFactor: all
+                  device: all
                   locale: en
                   prCommentEnabled: false
                   verbose: true
@@ -45,7 +45,7 @@ jobs:
                       https://homeschool.rebeccareid.com/courses/yes-you-can-homeschool/
 
             - name: Setup Node.JS
-              uses: actions/setup-node@v2.4.0
+              uses: actions/setup-node@v2.4.1
               with:
                   node-version: 16
                   cache: "npm"
